--- a/source/RockawayWish.Web/Views/Account/ForgotPassword.cshtml
+++ b/source/RockawayWish.Web/Views/Account/ForgotPassword.cshtml
@@ -7,19 +7,20 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-sm-8 col-sm-offset-2">
-                <h2 class="title-one">Forgot your password?</h2>
+                <h2 class="title-one">Forgot password?</h2>
                 @if (!Request.IsAuthenticated)
                 {
                     using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                     {
                     @Html.AntiForgeryToken()
-                    <h4>Forgot your password?  No problem!</h4>
+                    <h4>Forgot your password?  No problem! </h4>
                     <hr />
-                    @Html.ValidationSummary("", new { @class = "text-danger" })
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
-                        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                        @*@Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })*@
                         <div class="col-md-10">
-                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Please enter your email address" })
+                            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
