--- a/source/RockawayWish.Web/Views/Account/Login.cshtml
+++ b/source/RockawayWish.Web/Views/Account/Login.cshtml
@@ -16,17 +16,17 @@
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
-                        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                        @*@Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })*@
                         <div class="col-md-10">
-                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control email-field", @required = "required" })
+                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control email-field", @required = "required", @placeholder = "Enter Email" })
                             @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
-                        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                        @*@Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })*@
                         <div class="col-md-10">
-                            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                            @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Enter Password" })
+                            @*@Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })*@
                         </div>
                     </div>
                     @*<div class="form-group">
@@ -39,10 +39,11 @@
                 </div>*@
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Log in" class="btn btn-default" />
-                            <br style="margin-bottom: 40px;" />
+                            <p><input type="submit" value="Log in" class="btn btn-default" /></p>
+                            <p>&nbsp;</p>
                             @*<a href="@Url.Content("~/account/register")" class="btn btn-default">Register</a>*@
-                            <p>Forgot your password? <a href="@Url.Content("~/forgotpassword")">Click here</a>.</p>
+                            <p> <a href="@Url.Content("~/forgotpassword")">Forgot your password? </a> 
+                                &nbsp;&nbsp;|&nbsp;&nbsp;<a href="@Url.Content("~/register")">Need to register?</a></p>
                         </div>
                     </div>
                 }
