--- a/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
@@ -56,7 +56,7 @@
                 <div class="carousel-caption">
                     <div>
                         <h2 class="heading animated bounceInRight">Help</h2><br />
-                        <p class="animated bounceInUp">We are always looking more new members.</p>
+                        <p class="animated bounceInUp">We are always looking for new members.</p>
                         <p><a class="btn btn-default slider-btn animated bounceInUp" href="@Url.Content("~/register")">JOIN WISH</a></p>
                     </div>
                 </div>
