--- a/source/RockawayWish.Web/Views/Members/Index.cshtml
+++ b/source/RockawayWish.Web/Views/Members/Index.cshtml
@@ -4,7 +4,8 @@
         <div class="row text-center">
             <div class="col-sm-8 col-sm-offset-2">
                 <h2 class="title-one">Member Center</h2>
-                <p> We welcome you to WISH of Rockaway group with much love. We are excited to have you as a member and we look forward to learning about how you would like to be involved with WISH.</p>
+                <p> We welcome you to WISH of Rockaway with much love.<p>
+                <p> We are excited to have you as a member and we look forward to learning about how you would like to be involved with WISH.</p>
                 <br />
                 <p>
                     <a href="@Url.Content("~/members/info")" class="btn btn-default" style="margin-right: 20px;">View Profile Information</a>
