--- a/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
@@ -23,11 +23,13 @@
             <div class="item responsive-image" style="background-image: url('@Url.Content("~/Content/images/slider/slide2.jpg")')">
                 <div class="carousel-caption">
                     <div>
-                        <h2 class="heading animated bounceInDown">Women</h2><br />
-                        <p class="animated bounceInUp">This year we are honoring<br />
-                        Kathy Clarke, Kathleen Beissel, and Helen Hanning<br /> 
-                        at our annual Ladies Brunch on November 5th.</p>
-                        <p class="animated bounceInDown">Here's a sneak peek at the raffle prizes.</p>
+                        <h2 class="heading animated bounceInDown" style="margin-bottom: 10px">Women</h2>
+                        <p class="animated bounceInUp" style="margin-bottom: 0px;">
+                            This year we are honoring<br />
+                            Kathy Clarke, Kathleen Beissel, and Helen Hanning<br />
+                            at our annual Ladies Brunch on November 5th.
+                        </p>
+                        <p class="animated bounceInDown" style="margin-bottom: 14px">Here's a sneak peek at the raffle prizes.</p>
                         <a class="btn btn-default slider-btn animated fadeIn" href="@Url.Content("~/Content/pdf/wish-raffles-2016.pdf")" target="_blank">Raffle Info</a>
                     </div>
                 </div>
