--- a/source/RockawayWish.Web/Views/Donate/Payment.cshtml
+++ b/source/RockawayWish.Web/Views/Donate/Payment.cshtml
@@ -5,7 +5,7 @@
             <div class="col-sm-8 col-sm-offset-2">
                 <h2 class="title-one">Donate</h2>
                 <p>Click on the Donate button below to make a donation.</p>
-                <p>You will be redirected to our Paypal site. If you do not have a Paypal account, you can pay using a credit or debit card, however, Paypal will then ask you to set up an account. </p>
+                <p>You will be redirected to our Paypal site. If you do not have a Paypal account, you can pay using a credit or debit card.</p>
                 <p>In order to ensure proper payment processing, after you make your payment please click the "Return to WISH of Rockaway" button at the bottom of the screen.</p>
                 <div style="margin-top: 50px;">
                     @*@Html.Partial("_PayPalSubsribeButton")*@
