--- a/source/RockawayWish.Web/Views/Account/RegisterConfirmation.cshtml
+++ b/source/RockawayWish.Web/Views/Account/RegisterConfirmation.cshtml
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-sm-8 col-sm-offset-2">
-                <h2 class="title-one">Join WISH of Rockway!</h2>
+                <h2 class="title-one">Join WISH of Rockaway!</h2>
                 @if (!Request.IsAuthenticated)
                 {
                 <p>Thank you for your submission!</p>
