Photo Gallery updates

--- a/source/RockawayWish.Web/Content/css/responsive.css
+++ b/source/RockawayWish.Web/Content/css/responsive.css
@@ -17,7 +17,7 @@
 
     /* Resize navbar */
     #navigation .navbar-nav.navbar-right li a {
-        font-size: 14px;
+        font-size: 13px;
     }
 
     /* Resize home carousel */
@@ -344,8 +344,82 @@
 	}
 
     #footer p {
-	font-size:12px;
+	font-size:16px;
 
     }
 }
-	
+@media (min-width : 740px) and (max-width: 825px) {
+    #footer p {
+        font-size: 27px;
+    }
+}
+@media (min-width : 701px) and (max-width: 739px) {
+    #footer p {
+        font-size: 26px;
+    }
+}
+@media (min-width : 661px) and (max-width: 700px) {
+    #footer p {
+        font-size: 24px;
+    }
+}
+@media (min-width : 631px) and (max-width: 660px) {
+    #footer p {
+        font-size: 22px;
+    }
+}
+@media (min-width : 600px) and (max-width: 640px) {
+    #footer p {
+        font-size: 21px;
+    }
+}
+@media (min-width : 560px) and (max-width: 599px) {
+    #footer p {
+	font-size:20px;
+
+    }
+}
+@media (min-width : 520px) and (max-width: 559px) {
+    #footer p {
+	font-size:18px;
+
+    }
+}
+@media (min-width : 490px) and (max-width: 521px) {
+    #footer p {
+	font-size:17px;
+
+    }
+}
+@media (min-width : 450px) and (max-width: 489px) {
+    #footer p {
+	font-size:16px;
+
+    }
+}
+@media (min-width : 433px) and (max-width: 449px) {
+    #footer p {
+	font-size:15px;
+
+    }
+}
+@media (min-width : 420px) and (max-width: 432px) {
+    #footer p {
+	font-size:14px;
+    }
+}
+@media (min-width : 380px) and (max-width: 421px) {
+    #footer p {
+	font-size:13px;
+    }
+}
+@media (min-width : 360px) and (max-width: 379px) {
+    #footer p {
+	font-size:12px;
+    }
+}
+@media (min-width : 300px) and (max-width: 359px) {
+    #footer p {
+	font-size:11px;
+    }
+}
