--- a/source/RockawayWish.Web/Content/css/site.css
+++ b/source/RockawayWish.Web/Content/css/site.css
@@ -836,6 +836,160 @@ p { font-size: 16px; }
 /* End: Recommended Isotope styles */
 
 
+/*======================
+======Portfolio CSS=====
+========================*/
+
+#portfolio {
+  padding-top:70px;
+  padding-bottom: 100px;
+  background:#F6F6F6
+}
+
+#portfolio p, 
+#portfolio h2 {
+	margin-bottom:30px;
+}
+
+#portfolio 
+.portfolio-filter {
+  margin-bottom:40px;
+  margin-top:10px;
+}
+
+#portfolio 
+.portfolio-filter li {
+  display: inline-block;
+}
+
+#portfolio 
+.portfolio-filter li a:hover, 
+#portfolio 
+.portfolio-filter li a:focus,
+#portfolio 
+.portfolio-filter li a:active , 
+#portfolio 
+.portfolio-filter li .active{
+	border: 1px solid #fc7700;
+	color: #686868;
+	box-shadow: none;
+	-webkit-box-shadow: none;
+	opacity: 1;
+}
+
+#portfolio 
+.portfolio-filter li a {
+	color: #686868;
+	font-size: 16px;
+	text-transform: uppercase;
+	border: none;
+	background: rgba(67, 72, 78, 0);
+	opacity: .8;
+	border: 1px solid rgba(252, 119, 0, 0);
+	border-radius: inherit;
+}
+
+.portfolio-items > div{
+  padding:0;
+}
+
+.portfolio-items img{
+  width:100%;
+}
+
+.view {  
+  cursor: default;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  width:100%;
+}
+
+.efffect h4 {  
+	opacity: 0;
+	transform: scale(0);
+	transition: all 0.5s linear 0s;
+}
+
+.efffect h3 {
+	opacity: 0;
+	transform: scale(0);
+	-webkit-transition: all 0.5s linear 0s;
+	-moz-transition: all 0.5s linear 0s;
+	-ms-transition: all 0.5s linear 0s;
+	-o-transition: all 0.5s linear 0s;
+	transition: all 0.5s linear 0s;
+}
+
+.efffect img {
+	transform: scaleY(1);
+	-moz-transform: scaleY(1);
+	-webkit-transform: scaleY(1);
+	-o-transform: scaleY(1);
+	-ms-transform: scaleY(1);  
+	transition: all 0.7s ease-in-out 0s;
+	-moz-transition: all 0.7s ease-in-out 0s;
+	-webkit-transition: all 0.7s ease-in-out 0s;
+	-o-transition: all 0.7s ease-in-out 0s;
+}
+
+.view img {
+	display: block;
+	position: relative;
+}
+
+.efffect .mask {
+	background-color: #F6F6F6;
+    border:4px solid #333333;
+	-webkit-transition: all 0.5s linear 0s;
+	-moz-transition: all 0.5s linear 0s;
+	-ms-transition: all 0.5s linear 0s;
+	-o-transition: all 0.5s linear 0s;
+	transition: all 0.5s linear 0s;
+	opacity: 0
+}
+
+.view .mask, .view .content {
+	height:100%;
+	left: 0;
+	overflow: hidden;
+	position: absolute;
+	top: 0;
+	width:100%;
+}
+
+.mask h3 {
+	color: #43484E;
+	font-family: cabin;
+	font-size: 22px;
+	font-weight: 700;
+	margin-top: 30px;
+	text-transform: uppercase;
+	transition: height 500ms ease 0s;
+}
+
+.mask h4 {
+	color:#000;
+	font-family: roboto;
+	font-size: 14px;
+	font-weight: 200;
+	padding: 0 35px 5px;
+}
+
+.mask i {
+	border: 2px solid #333;
+	border-radius: 50%;
+	color: #333;
+	font-size: 17px;
+	margin-left: 8px;
+	padding: 8px;
+}
+
+.mask i:hover{
+	background-color:#fc7700;
+	color:#fff;  
+}
 
 
 /*==================================
@@ -964,3 +1118,6 @@ p { font-size: 16px; }
 .form-group a {
     font-size: 24px;
 }
+
+
+
