Added edit profile feature

--- a/source/RockawayWish.Web/Views/Members/Payments.cshtml
+++ b/source/RockawayWish.Web/Views/Members/Payments.cshtml
@@ -84,7 +84,7 @@
                     <p style="padding: 10px; color: #ff0000; font-weight: bold;">No dues have been applied.</p>
                 }
 
-                <h5>@*<a href="@Url.Content("~/members/payments")">Dues and payments</a> |*@ <a href="@Url.Content("~/members/info")" class="btn btn-default">View Profile Information</a></h5>
+                <h5>@*<a href="@Url.Content("~/members/payments")">Dues and payments</a> |*@ <a href="@Url.Content("~/members/profile")" class="btn btn-default">Profile Information</a></h5>
 
 
             </div>
