--- a/source/RockawayWish.Web/Views/Members/Index.cshtml
+++ b/source/RockawayWish.Web/Views/Members/Index.cshtml
@@ -8,7 +8,7 @@
                 <p> We are excited to have you as a member and we look forward to learning about how you would like to be involved with WISH.</p>
                 <br />
                 <p>
-                    <a href="@Url.Content("~/members/info")" class="btn btn-default" style="margin-right: 20px;">View Profile Information</a>
+                    <a href="@Url.Content("~/members/profile")" class="btn btn-default" style="margin-right: 20px;">View Profile Information</a>
 
                     <a href="@Url.Content("~/members/payments")" class="btn btn-default">Dues and payments</a>
                 </p>
