--- a/source/RockawayWish.Web/Content/css/site.css
+++ b/source/RockawayWish.Web/Content/css/site.css
@@ -77,6 +77,8 @@ h1, h2, h3, h4, h5, h6 {
 
 p { font-size: 16px; }
 
+ul { list-style-type: none; }
+
 .slider-btn {
 
 	background-color:#FFA1D5;
@@ -709,7 +711,7 @@ p { font-size: 16px; }
 
 #footer {
 	background-color:#FFA1D5;
-	padding:25px 0;
+	padding:5px 0;
 	color:#000;
 	font-size:16px;
 	/*position:relative;*/
