--- a/source/RockawayWish.Web/Views/Account/Login.cshtml
+++ b/source/RockawayWish.Web/Views/Account/Login.cshtml
@@ -14,19 +14,23 @@
                     @Html.AntiForgeryToken()
                     <h4>Sign in to keep up to date on your membership status and upcoming WISH events.</h4>
                     <hr />
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    @Html.ValidationSummary(true, "", new { @class = "alert alert-danger" })
                     <div class="form-group">
-                        @*@Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })*@
-                        <div class="col-md-10" style="text-align: center;">
-                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control email-field", @required = "required", @placeholder = "Enter Email" })
+                        <label class="col-sm-2 control-label" for="Email">&nbsp;</label>
+                        <div class="col-sm-10 input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Email" })
+                            @*<span class="glyphicon glyphicon-warning-sign form-control-feedback"></span>*@
                             @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
                         @*@Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })*@
-                        <div class="col-md-10">
-                            @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Enter Password" })
-                            @*@Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })*@
+                        <label class="col-md-2 control-label" for="Password">&nbsp;</label>
+                        <div class="col-md-10 input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                            @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password" })
+                            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     @*<div class="form-group">
