--- a/source/RockawayWish.Web/Views/Shared/_Footer.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_Footer.cshtml
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="text-center social-icons">
             <p>
-                Copyright &copy; 2016 - WISH of Rockaway Inc. | All Rights Reserved
+                Copyright &copy; @DateTime.Now.Year.ToString() - WISH of Rockaway Inc. | All Rights Reserved
                 <a href="https://www.facebook.com/Rockaway-WISH-305408352848897" target="_blank" ><i class="fa fa-facebook"></i></a>
                 <a href="https://twitter.com/RockawayWISH" target="_blank"><i class="fa fa-twitter"></i></a>
                 <a href="https://www.instagram.com/wishofrockaway/" target="_blank"><i class="fa fa-instagram"></i></a>
