--- a/source/RockawayWish.Web/Views/Shared/_Layout.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Rockaway W.I.S.H. is a registered 501(c)(3) non-profit organization. Since 2006, our group of born & bred Rockawayites, has been at the forefront of local volunteer efforts, aiding our neighbors in times of need. On October 29, 2012, Hurricane Sandy decimated our home town, making our presence in the neighborhood more crucial than ever before. Our Mission, post Hurricane Sandy, is to provide monetary relief to victims during the recovery and rebuild phases of this disaster.">
     <title>Welcome to the Wish of Rockaway</title>
-    <meta name="keywords" content="Rockaway Wish" />
+    <meta name="keywords" content="Rockaway Wish, Wish of Rockaway, Donate, Donate to Wish, Charity, Rockaway Charity, Community, Rockaway Community" />
     <meta name="author" content="">
     <link href="@Url.Content("~/Content/css/bootstrap.min.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/css/prettyPhoto.css")" rel="stylesheet">
