Update to carousel

--- a/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
@@ -23,14 +23,14 @@
             <div class="item responsive-image" style="background-image: url('@Url.Content("~/Content/images/slider/slide2.jpg")')">
                 <div class="carousel-caption">
                     <div>
-                        <h2 class="heading animated bounceInDown" style="margin-bottom: 10px">Women</h2>
-                        <p class="animated bounceInUp" style="margin-bottom: 0px;">
-                            This year we are honoring<br />
-                            Kathy Clarke, Kathleen Beissel, and Helen Hanning<br />
-                            at our annual Ladies Brunch on November 5th.
+                        @*<h2 class="heading animated bounceInDown" style="margin-bottom: 10px; color: #FF2A7F">Women</h2>*@
+                        <p class="animated bounceInUp" style="margin-bottom: 0px; color: #FF2A7F; font-size: 28px;">
+                            Click the link below to register<br />
+                            for the run and help local families<br />
+                            dealing with cancer.<br /><br />
                         </p>
-                        <p class="animated bounceInDown" style="margin-bottom: 14px">Here's a sneak peek at the raffle prizes.</p>
-                        <a class="btn btn-default slider-btn animated fadeIn" href="@Url.Content("~/Content/pdf/wish-raffles-2016.pdf")" target="_blank">Raffle Info</a>
+                        @*<p class="animated bounceInDown" style="margin-bottom: 14px">Here's a sneak peek at the raffle prizes.</p>*@
+                        <a class="btn btn-default slider-btn animated fadeIn" href="http://www.rockapulcorun.com" target="_blank">Catch a Cure</a>
                     </div>
                 </div>
 
