Remove photos link

--- a/source/RockawayWish.Web/Views/Shared/_Layout.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="@Url.Content("~/")">Home</a></li>
                         <li><a href="@Url.Content("~/about-wish")">About Us</a></li>
-                        <li><a href="@Url.Content("~/photos/instagram")">Photos</a></li>
+                        @*<li><a href="@Url.Content("~/photos/instagram")">Photos</a></li>*@
                         <li><a href="@Url.Content("~/donate")">Donate</a></li>
                         <li><a href="@Url.Content("~/contact-wish")">Contact Us</a></li>
 
