Update Donate functionality

--- a/source/RockawayWish.Web/Views/Donate/CancelPayment.cshtml
+++ b/source/RockawayWish.Web/Views/Donate/CancelPayment.cshtml
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-sm-8 col-sm-offset-2">
-                <h2 class="title-one">Donate</h2>
+                <h2 class="title-one">Donate to WISH of Rockaway!</h2>
                 <p> Your donation has been canceled.</p>
                 <br />
             </div>
