--- a/source/RockawayWish.Web/Views/Donate/CompletePayment.cshtml
+++ b/source/RockawayWish.Web/Views/Donate/CompletePayment.cshtml
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-sm-8 col-sm-offset-2">
-                <h2 class="title-one">Donate</h2>
+                <h2 class="title-one">Donate to WISH of Rockaway!</h2>
                 <p> Thank you for your donation!</p>
             </div>
         </div>
